@@ -2,6 +2,5 @@ AUX ntk-9999-noldconfig-r1.patch 1591 SHA256 9bb1ef6289dce928f0ec4739efac673e16f
 AUX ntk-9999-noldconfig.patch 1048 SHA256 642cf2b5ce71962776eff33f2cd78c0cb9d3fd743b8249e9ac9240077671addd SHA512 19ce44d9b44ddddf607c9160425ddf5827388c742ac95746020c1780237a9b4b45516d89b897ed395cada25a14d72661cb4035b5c13b18967a004d4741ee2e32 WHIRLPOOL 74f7f382df665a7a73b5a90b111da7304c63efe36b5bfb682b86cee6eab222cb032f7fa4baa1b3b4af691325d4120bc79a4f796f0265a774d6913bde261e73ac
 AUX ntk-9999-nooptimize.patch 1369 SHA256 a4da765e0581ec04c8b0198d719cfa34317e709bd220f750c82ecd967e124350 SHA512 47ded85b2a47c2ef5745920a2b7f1beb826a59444e2a2acbe1af2070a54ca4b1c43fb874fa982d99292267f056373da417c9d781b5a18727e1c05a2a4541dcd4 WHIRLPOOL c618ed73ae6c954e3c51744a94351870d9881661dd7b37294f7588f2c64c60272a2b62557face68b60cc178a73672c43ff47484affff96d91c8c614008749a98
 EBUILD ntk-9999-r1.ebuild 1187 SHA256 ba050d2c0ba68ad89e157255c20ba143a3eb34a91e03e7fd63a00f35d1cd79a1 SHA512 aaba351f8c4ea6be95b0e79ea5fa98eb94599da9617aa08db31d4624e07ee6c04b973db71bc319d13c4e8166a1a1a822268f16595b70d1418e398244af327518 WHIRLPOOL df3478392e112874dd9e6b19d8801637d78bc10087f92d94a180a6740c1d98dfef138778414877d3cd77bc3792dcfbb8a83816a32da54bb6221cd6efec0a83f7
-EBUILD ntk-9999.ebuild 843 SHA256 965c272f3488d62f40a454b2aa0b39e995671a5641262a07634ab0db7510bfcd SHA512 b946b3ffeb51ebe38a70f569bd86847b7dfde902c12befb10cc4be5865ff24baf44a65cff5db30d46e8c593ac2ae504aba3f91df871cd11b9eeecbebde7aaec9 WHIRLPOOL 7d2b94de949defe328ae3c84d5f62ac14524fb5e7f70ef34e7bb9ecbdf5080ad62098a97799e9fd671fe8d01287b5b4e2fd8b0324590dfeaf4474932cbd5c1b8
-MISC ChangeLog 1126 SHA256 0c05ea033c514b49aeb2c94fa2063f9f49686fc137e7aef81137d269641cac4d SHA512 9bb4ab52dbcf297d4d53b360e98e6e8c419b5cb124fb1401f41bd94ab8b5c04f8066d70dc660675e345b1ac92b64b5c249cc26b3fba12c90711623257c2340e5 WHIRLPOOL 8104eb724baa26834b8b46f28a452e8f0571175837df7237569d455525b95a4a21b09c022ddfb6aca12eb2f136e9edac9242fcf87cb6d5ac8fb1fc610bfd1b35
+MISC ChangeLog 1248 SHA256 2718dc7fc04c73985837a923e34ae9d2a49742222c8864fee4178bbff31d308c SHA512 9c85ded087abeb3d4d64a18f00be82dd65aff593f779214c635c12b513d002cd36570aae25b920c30050fcfcb19f14161edb8a57fe7eeb1f5d00ba61fedbfad1 WHIRLPOOL f7716c9a0b27e1a53a15589b70f508bd1e1b0d810904d9735d93df7df1649781e6e72976548981960462e7d1efa3c65ebcb8691a5ee1a3785a1ecca79fe39c3e
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
