@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 Nov 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  -ntk-9999.ebuild:
+  Removed old python eclass ebuild.
+
 *ntk-9999-r1 (31 Jul 2013)
 
   31 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
